# tire-surface-profiler

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_quickstart.ipynb  02_batch_profiles.ipynb  03_repeatability.ipynb
sample_data/: README.md
scripts/: create_synthetic_tire.py
tire_profiler/: __init__.py  align.py  cli.py  cylinder.py  io_glb.py  rimline.py  slice_profile.py
